<resources>
    <string name="app_name">Cidadão Ativo</string>
    <string name="notasPessoais">Notas Pessoais</string>
    <string name="criarNotaPessoais">Criar Nota Pessoal</string>
    <string name="guardar">Guardar</string>
    <string name="titulo">Título</string>
    <string name="subtitulo">Subtítulo</string>
    <string name="descricao">Descrição</string>
    <string name="hintTitulo">Problema de esgoto</string>
    <string name="hintSubtitulo">Rua dos problemas de esgoto</string>
    <string name="hintDescricao">Descrição sobre o problema e mais informações adicionais</string>
    <string name="validacaoNotaPessoal">Campos não podem estar vazios</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="editarNotaPessoal">Editar nota pessoal</string>
    <string name="username">Utilizador</string>
    <string name="password">Palavra-passe</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="foto">Foto</string>
    <string name="localizacao">Localização</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_map">Mapa</string>
    <string name="por">Por</string>
    <string name="preference_login_key">loginfile</string>
    <string name="loginUsername">user</string>
    <string name="criadoPor">Criador por</string>
    <string name="geofence_entered">Existe um problema perto de si!</string>
    <string name="preference_settings_key">settingsfile</string>
    <string name="ativar_notificacoes">Ativar notificações</string>
    <string name="desativar_notificacoes">Desativar notificações</string>
    <string name="geofence_exited">Saiu da zona de um problema!</string>
</resources>