<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarNotaPessoal">

    <LinearLayout
        android:layout_margin="15dp"
        android:background="@drawable/item_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activityTitleCriarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28dp"
            android:textStyle="bold"
            android:text="@string/criarNotaPessoais"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/titulo"/>
            <EditText
                android:id="@+id/editTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTitulo"
                android:textSize="18dp"
                android:background="@drawable/edit_text_background"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"

                android:textStyle="bold"
                android:text="@string/subtitulo"/>
            <EditText
                android:id="@+id/editSubtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSubtitulo"
                android:textSize="18dp"
                android:background="@drawable/edit_text_background"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/descricao"/>
            <EditText
                android:id="@+id/editDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintDescricao"
                android:textSize="18dp"
                android:background="@drawable/edit_text_background"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>