<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background"
    android:layout_marginTop="10dp">


        <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/titulo" />



    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:text="@string/subtitulo"
        android:textStyle="bold"
        android:textSize="18dp"
        />


    <TextView
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitulo"
        android:text="@string/descricao"
        />

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descricao">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left">

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/deletebutton"
                android:src="@android:drawable/ic_menu_edit"
                android:text="@string/editar" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right">

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/deletebutton"
                android:src="@android:drawable/ic_menu_delete"
                android:text="@string/remover" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>