<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/edit_marker_criadoPor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/criadoPor" />

            <TextView
                android:id="@+id/edit_marker_criadoPor_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="Root" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_marker_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/descricao"/>

            <TextView
                android:id="@+id/edit_marker_descricao_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="Descrição"/>

        </LinearLayout>

        <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left">

                <ImageButton
                    android:id="@+id/edit_marker_editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/deletebutton"
                    android:src="@android:drawable/ic_menu_edit"
                    android:text="@string/editar" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">

                <ImageButton
                    android:id="@+id/edit_marker_deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/deletebutton"
                    android:src="@android:drawable/ic_menu_delete"
                    android:text="@string/remover" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>